--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SliderPuzzle</string>
+    <string name="you_win">You Win</string>
+    <string name="press_okay_to_play_again">Press OK to play again.</string>
+    <string name="ok">OK</string>
+
 </resources>
